--- a/Scribe/Components/InfoChildTableViewCell/InfoChildTableViewCell.xib
+++ b/Scribe/Components/InfoChildTableViewCell/InfoChildTableViewCell.xib
@@ -6,82 +6,105 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InfoChildTableViewCell" rowHeight="50" id="KGk-i7-Jjw" customClass="InfoChildTableViewCell" customModule="Scribe" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InfoChildTableViewCell" rowHeight="128" id="KGk-i7-Jjw" customClass="InfoChildTableViewCell" customModule="Scribe" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="424" height="128"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="424" height="128"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JHo-c6-kU1">
-                        <rect key="frame" x="16" y="12" width="26" height="26"/>
-                        <color key="tintColor" name="keyChar"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l6P-p1-vZD">
+                        <rect key="frame" x="0.0" y="0.0" width="424" height="128"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JHo-c6-kU1">
+                                <rect key="frame" x="16" y="16" width="26" height="26"/>
+                                <color key="tintColor" name="keyChar"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="bzN-eO-Qw2"/>
+                                    <constraint firstAttribute="width" constant="26" id="izd-eT-gcA"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-83-3eC">
+                                <rect key="frame" x="50" y="16" width="301" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="26" id="trX-iS-h3L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <color key="textColor" name="keyChar"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZg-In-Sru">
+                                <rect key="frame" x="16" y="50" width="392" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="h5P-Y8-JKH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <color key="textColor" systemColor="secondaryLabelColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FbK-yb-cab">
+                                <rect key="frame" x="359" y="13.666666666666664" width="51" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="49" id="TLe-pF-eis"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="switchDidChange:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="9ge-t9-By6"/>
+                                </connections>
+                            </switch>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="e08-KD-4sq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="26" id="bzN-eO-Qw2"/>
-                            <constraint firstAttribute="width" constant="26" id="izd-eT-gcA"/>
+                            <constraint firstAttribute="trailing" secondItem="FbK-yb-cab" secondAttribute="trailing" constant="16" id="3s0-Zw-YSj"/>
+                            <constraint firstItem="LZg-In-Sru" firstAttribute="leading" secondItem="l6P-p1-vZD" secondAttribute="leading" constant="16" id="71k-Bj-KYB"/>
+                            <constraint firstItem="JHo-c6-kU1" firstAttribute="top" secondItem="l6P-p1-vZD" secondAttribute="top" constant="16" id="Cbh-DW-DpW"/>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="16" id="PXy-LD-usI"/>
+                            <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="l6P-p1-vZD" secondAttribute="leading" priority="900" constant="16" id="YYU-SX-n2Q"/>
+                            <constraint firstItem="XI7-83-3eC" firstAttribute="centerY" secondItem="JHo-c6-kU1" secondAttribute="centerY" id="e4o-HJ-dvc"/>
+                            <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="JHo-c6-kU1" secondAttribute="trailing" constant="8" id="fPm-bp-an4"/>
+                            <constraint firstItem="LZg-In-Sru" firstAttribute="top" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="8" id="fZ2-aM-LoY"/>
+                            <constraint firstItem="JHo-c6-kU1" firstAttribute="leading" secondItem="l6P-p1-vZD" secondAttribute="leading" constant="16" id="fjG-77-Yhh"/>
+                            <constraint firstItem="FbK-yb-cab" firstAttribute="leading" secondItem="XI7-83-3eC" secondAttribute="trailing" constant="8" id="jLg-C9-5nA"/>
+                            <constraint firstAttribute="bottom" secondItem="LZg-In-Sru" secondAttribute="bottom" constant="16" id="kOE-ta-dAg"/>
+                            <constraint firstItem="XI7-83-3eC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="l6P-p1-vZD" secondAttribute="top" constant="16" id="mSh-fL-RUI"/>
+                            <constraint firstItem="FbK-yb-cab" firstAttribute="centerY" secondItem="XI7-83-3eC" secondAttribute="centerY" id="vUN-eE-4TR"/>
+                            <constraint firstAttribute="trailing" secondItem="LZg-In-Sru" secondAttribute="trailing" constant="16" id="yS1-SB-bCE"/>
                         </constraints>
-                    </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="c3b-Ee-Sjz">
-                        <rect key="frame" x="284" y="17" width="20" height="16.333333333333329"/>
-                        <color key="tintColor" name="keyChar"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="20" id="9BB-IF-6aL"/>
-                            <constraint firstAttribute="height" constant="20" id="m4s-Wg-NCb"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-83-3eC">
-                        <rect key="frame" x="58" y="15" width="42" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="trX-iS-h3L"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" name="keyChar"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FbK-yb-cab">
-                        <rect key="frame" x="255" y="8" width="51" height="34"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="49" id="TLe-pF-eis"/>
-                        </constraints>
-                        <connections>
-                            <action selector="switchDidChange:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="9ge-t9-By6"/>
-                        </connections>
-                    </switch>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="c3b-Ee-Sjz" secondAttribute="trailing" constant="16" id="1GZ-t8-7QH"/>
-                    <constraint firstItem="c3b-Ee-Sjz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="OFN-MG-1LO"/>
-                    <constraint firstAttribute="bottom" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="14" id="R4Y-ld-ZrN"/>
-                    <constraint firstItem="JHo-c6-kU1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="ZI3-Hg-4Z0"/>
-                    <constraint firstItem="FbK-yb-cab" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="co0-nN-Poh"/>
-                    <constraint firstAttribute="bottom" secondItem="FbK-yb-cab" secondAttribute="bottom" constant="8" id="e0D-ba-cEF"/>
-                    <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="JHo-c6-kU1" secondAttribute="trailing" constant="16" id="hea-p2-0IU"/>
-                    <constraint firstAttribute="bottom" secondItem="c3b-Ee-Sjz" secondAttribute="bottom" constant="15" id="iz6-l0-L8h"/>
-                    <constraint firstAttribute="bottom" secondItem="JHo-c6-kU1" secondAttribute="bottom" constant="12" id="jbW-xC-URt"/>
-                    <constraint firstAttribute="trailing" secondItem="FbK-yb-cab" secondAttribute="trailing" constant="16" id="kzi-n0-hcA"/>
-                    <constraint firstItem="XI7-83-3eC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="ngM-8D-Vif"/>
-                    <constraint firstItem="JHo-c6-kU1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="on6-i8-GTD"/>
+                    <constraint firstItem="l6P-p1-vZD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ecc-0W-1im"/>
+                    <constraint firstAttribute="bottom" secondItem="l6P-p1-vZD" secondAttribute="bottom" id="ms6-hg-krX"/>
+                    <constraint firstAttribute="trailing" secondItem="l6P-p1-vZD" secondAttribute="trailing" id="t4Q-Yb-WbM"/>
+                    <constraint firstItem="l6P-p1-vZD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xhf-zy-5x5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="chevronImgView" destination="c3b-Ee-Sjz" id="0NU-PH-88e"/>
+                <outlet property="containerView" destination="l6P-p1-vZD" id="4Tm-qb-JHB"/>
+                <outlet property="descriptionLabel" destination="LZg-In-Sru" id="M4c-Fh-6s1"/>
                 <outlet property="iconImageView" destination="JHo-c6-kU1" id="iTB-MV-z6M"/>
                 <outlet property="titleLabel" destination="XI7-83-3eC" id="8Oo-On-CWs"/>
                 <outlet property="toggleSwitch" destination="FbK-yb-cab" id="CYZ-wz-okM"/>
             </connections>
-            <point key="canvasLocation" x="25.954198473282442" y="-10.563380281690142"/>
+            <point key="canvasLocation" x="105.34351145038167" y="16.901408450704228"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chevron.right" catalog="system" width="97" height="128"/>
         <namedColor name="keyChar">
             <color red="0.0" green="0.0" blue="0.0" alpha="0.89999997615814209" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
