--- a/Scribe/Components/InfoChildTableViewCell/InfoChildTableViewCell.xib
+++ b/Scribe/Components/InfoChildTableViewCell/InfoChildTableViewCell.xib
@@ -19,77 +19,49 @@
                 <rect key="frame" x="0.0" y="0.0" width="424" height="128"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l6P-p1-vZD">
-                        <rect key="frame" x="0.0" y="0.0" width="424" height="128"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JHo-c6-kU1">
-                                <rect key="frame" x="16" y="16" width="26" height="26"/>
-                                <color key="tintColor" name="keyChar"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="26" id="bzN-eO-Qw2"/>
-                                    <constraint firstAttribute="width" constant="26" id="izd-eT-gcA"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-83-3eC">
-                                <rect key="frame" x="50" y="16" width="301" height="26"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="26" id="trX-iS-h3L"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                                <color key="textColor" name="keyChar"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZg-In-Sru">
-                                <rect key="frame" x="16" y="50" width="392" height="62"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="h5P-Y8-JKH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                <color key="textColor" systemColor="secondaryLabelColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FbK-yb-cab">
-                                <rect key="frame" x="359" y="13.666666666666664" width="51" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="49" id="TLe-pF-eis"/>
-                                </constraints>
-                                <connections>
-                                    <action selector="switchDidChange:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="9ge-t9-By6"/>
-                                </connections>
-                            </switch>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="e08-KD-4sq"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FbK-yb-cab">
+                        <rect key="frame" x="359" y="13.666666666666664" width="51" height="31"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="FbK-yb-cab" secondAttribute="trailing" constant="16" id="3s0-Zw-YSj"/>
-                            <constraint firstItem="LZg-In-Sru" firstAttribute="leading" secondItem="l6P-p1-vZD" secondAttribute="leading" constant="16" id="71k-Bj-KYB"/>
-                            <constraint firstItem="JHo-c6-kU1" firstAttribute="top" secondItem="l6P-p1-vZD" secondAttribute="top" constant="16" id="Cbh-DW-DpW"/>
-                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="16" id="PXy-LD-usI"/>
-                            <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="l6P-p1-vZD" secondAttribute="leading" priority="900" constant="16" id="YYU-SX-n2Q"/>
-                            <constraint firstItem="XI7-83-3eC" firstAttribute="centerY" secondItem="JHo-c6-kU1" secondAttribute="centerY" id="e4o-HJ-dvc"/>
-                            <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="JHo-c6-kU1" secondAttribute="trailing" constant="8" id="fPm-bp-an4"/>
-                            <constraint firstItem="LZg-In-Sru" firstAttribute="top" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="8" id="fZ2-aM-LoY"/>
-                            <constraint firstItem="JHo-c6-kU1" firstAttribute="leading" secondItem="l6P-p1-vZD" secondAttribute="leading" constant="16" id="fjG-77-Yhh"/>
-                            <constraint firstItem="FbK-yb-cab" firstAttribute="leading" secondItem="XI7-83-3eC" secondAttribute="trailing" constant="8" id="jLg-C9-5nA"/>
-                            <constraint firstAttribute="bottom" secondItem="LZg-In-Sru" secondAttribute="bottom" constant="16" id="kOE-ta-dAg"/>
-                            <constraint firstItem="XI7-83-3eC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="l6P-p1-vZD" secondAttribute="top" constant="16" id="mSh-fL-RUI"/>
-                            <constraint firstItem="FbK-yb-cab" firstAttribute="centerY" secondItem="XI7-83-3eC" secondAttribute="centerY" id="vUN-eE-4TR"/>
-                            <constraint firstAttribute="trailing" secondItem="LZg-In-Sru" secondAttribute="trailing" constant="16" id="yS1-SB-bCE"/>
+                            <constraint firstAttribute="width" constant="49" id="TLe-pF-eis"/>
                         </constraints>
-                    </view>
+                        <connections>
+                            <action selector="switchDidChange:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="9ge-t9-By6"/>
+                        </connections>
+                    </switch>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZg-In-Sru">
+                        <rect key="frame" x="16" y="46" width="392" height="66"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="h5P-Y8-JKH"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                        <color key="textColor" systemColor="secondaryLabelColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-83-3eC">
+                        <rect key="frame" x="15.999999999999996" y="16" width="40.666666666666657" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="trX-iS-h3L"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                        <color key="textColor" name="keyChar"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="l6P-p1-vZD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ecc-0W-1im"/>
-                    <constraint firstAttribute="bottom" secondItem="l6P-p1-vZD" secondAttribute="bottom" id="ms6-hg-krX"/>
-                    <constraint firstAttribute="trailing" secondItem="l6P-p1-vZD" secondAttribute="trailing" id="t4Q-Yb-WbM"/>
-                    <constraint firstItem="l6P-p1-vZD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xhf-zy-5x5"/>
+                    <constraint firstAttribute="trailing" secondItem="LZg-In-Sru" secondAttribute="trailing" constant="16" id="2Qt-oK-abA"/>
+                    <constraint firstAttribute="bottom" secondItem="LZg-In-Sru" secondAttribute="bottom" constant="16" id="3UC-Es-LgJ"/>
+                    <constraint firstItem="LZg-In-Sru" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="5iP-HO-wDD"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="16" id="7Sd-0h-s3R"/>
+                    <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="AFt-39-OV3"/>
+                    <constraint firstItem="FbK-yb-cab" firstAttribute="centerY" secondItem="XI7-83-3eC" secondAttribute="centerY" id="IRH-3q-9RQ"/>
+                    <constraint firstAttribute="trailing" secondItem="FbK-yb-cab" secondAttribute="trailing" constant="16" id="NSu-Bi-Rs7"/>
+                    <constraint firstItem="LZg-In-Sru" firstAttribute="top" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="4" id="YPZ-4h-YkG"/>
+                    <constraint firstItem="XI7-83-3eC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="da5-Mw-d8e"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="containerView" destination="l6P-p1-vZD" id="4Tm-qb-JHB"/>
                 <outlet property="descriptionLabel" destination="LZg-In-Sru" id="M4c-Fh-6s1"/>
-                <outlet property="iconImageView" destination="JHo-c6-kU1" id="iTB-MV-z6M"/>
                 <outlet property="titleLabel" destination="XI7-83-3eC" id="8Oo-On-CWs"/>
                 <outlet property="toggleSwitch" destination="FbK-yb-cab" id="CYZ-wz-okM"/>
             </connections>
@@ -101,10 +73,7 @@
             <color red="0.0" green="0.0" blue="0.0" alpha="0.89999997615814209" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
